# rhyolite

./: package.json  settings.json  tailwind.config.js  vite.config.js
.cargo/: config.toml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Crates/markdown_engine/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/default_themes/: CrimsonNocturne.json  catppuccinLatte.json  catppuccinMacchiato.json  catppuccinMocha.json  coffee.json  default.json  greenscreen.json  rosePineDawn.json  rosePineMain.json  rosePineMoon.json
src-tauri/src/editor/settings/themes/: utils.rs
src-tauri/src/settings/: setting.rs
src/components/: cm-extentions.ts  codemirror-edtior.svelte  command-palette.svelte  document.svelte  general-settings.svelte  recentfilesmenu.svelte  settingsmenu.svelte  sidebar.svelte  titlebar.svelte  workspace.svelte
src/components/content-editor/: content-editor.svelte
src/lib/: home-hotkeys.svelte.ts
src/lib/components/: command-palette.svelte  document.svelte  recentfilesmenu.svelte  sidebar.svelte  titlebar.svelte
src/lib/components/content-editor/: content-editor.svelte
src/lib/stores/: command-palette.svelte.ts  themes.svelte.ts
src/lib/styles/: styles.css
src/lib/styles/addons/: tailwind-addon.css
src/lib/themes/: rosePineDawn.ts  rosePineMoon.ts
src/lib/types/: theme.d.ts
src/routes/: +page.svelte
src/services/: api.interface.ts  api.service.ts  document.service.ts  settings.service.ts  tab.service.ts  tauri-invoke.service.ts
src/stores/: command-palette.svelte.ts  content-editor.svelte.ts  general-settings.store.ts  recent-files.svelte.ts  settings-menu.svelte.ts  tabs.svelte.ts  theme.store.ts  theme.svelte.ts
src/types/: settings.ts  tab.ts
